--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet>
+        <servlet-name>ListaCarreras</servlet-name>
+        <servlet-class>com.isragomez.AdministracionCarrerasApp.Acciones.ListarCarreras</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MostrarInfoCarrera</servlet-name>
+        <servlet-class>com.isragomez.AdministracionCarrerasApp.Acciones.MostrarInfoCarrera</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MostrarInfoCarrera</servlet-name>
+        <url-pattern>/carrera</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListaCarreras</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 </web-app>
