--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,14 @@
         <servlet-name>MostrarInfoCarrera</servlet-name>
         <servlet-class>com.isragomez.AdministracionCarrerasApp.Acciones.MostrarInfoCarrera</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AgregarCarrera</servlet-name>
+        <servlet-class>com.isragomez.AdministracionCarrerasApp.Acciones.AgregarCarrera</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AgregarCarrera</servlet-name>
+        <url-pattern>/AgregarCarrera</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>MostrarInfoCarrera</servlet-name>
         <url-pattern>/carrera</url-pattern>
