--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,14 @@
         <servlet-name>AgregarCarrera</servlet-name>
         <servlet-class>com.isragomez.AdministracionCarrerasApp.Acciones.AgregarCarrera</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EliminarCarrera</servlet-name>
+        <servlet-class>com.isragomez.AdministracionCarrerasApp.Acciones.EliminarCarrera</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>EliminarCarrera</servlet-name>
+        <url-pattern>/EliminarCarrera</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AgregarCarrera</servlet-name>
         <url-pattern>/AgregarCarrera</url-pattern>
